--- a/BoleteraV3/nbproject/project.properties
+++ b/BoleteraV3/nbproject/project.properties
@@ -38,8 +38,8 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.itextpdf-5.4.0.jar}:\
-    ${file.reference.mysql-connector-java-5.1.31-bin.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mysql-connector-java-5.1.31-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
